--- a/tmux.conf
+++ b/tmux.conf
@@ -11,4 +11,8 @@ bind-key    Down  select-pane -D
 bind-key    Left  select-pane -L
 bind-key    Right select-pane -R
 
-bind -t vi-copy y copy-pipe "xclip -sel clip -i"
+bind -T vi-copy y copy-pipe "xclip -sel clip -i"
+
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi y send-keys -X copy-selection
+bind-key -T copy-mode-vi r send-keys -X rectangle-toggle
