som minor modifications to vim and tmux set ups

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,18 +1,42 @@
+# Act like GNU screen, use C-a instead of C-b
+#unbind-key C-b
+#set-option -g prefix C-a
+
 set -g default-terminal 'screen-256color'
 set -g history-limit 999999
 set -g status-fg green
 set -g status-bg black
 set -g mouse on
 
+#set-window-option -g mode-keys vi
 setw -g mode-keys vi
+set -g status-keys vi
 
 bind-key    Up    select-pane -U
 bind-key    Down  select-pane -D
 bind-key    Left  select-pane -L
 bind-key    Right select-pane -R
 
-#bind -T vi-copy y copy-pipe "xclip -sel clip -i"
+bind P paste-buffer
 
-bind-key -T copy-mode-vi v send-keys -X begin-selection
-bind-key -T copy-mode-vi y send-keys -X copy-selection
-bind-key -T copy-mode-vi r send-keys -X rectangle-toggle
+bind-key r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded"
+bind-key s run-shell "tmux show-buffer | xclip -sel clip -i" \; display-message "Copied tmux buffer to system clipboard"
+
+bind-key -n MouseDrag1Pane if -Ft= '#{mouse_any_flag}' 'if -Ft= \"#{pane_in_mode}\" \"copy-mode -M\" \"send-keys -M\"' 'copy-mode -M'
+
+bind-key    -T copy-mode    C-Space           send-keys -X begin-selection
+bind-key    -T copy-mode    C-g               send-keys -X clear-selection
+bind-key    -T copy-mode    C-w               send-keys -X copy-selection-and-cancel
+#bind-key    -T copy-mode    MouseDrag1Pane    select-pane ; send-keys -X begin-selection
+bind-key    -T copy-mode    MouseDragEnd1Pane send-keys -X copy-selection-and-cancel
+bind-key    -T copy-mode    M-w               send-keys -X copy-selection-and-cancel
+bind-key    -T copy-mode    Enter             send-keys -X copy-selection-and-cancel
+
+bind-key    -T copy-mode-vi C-j               send-keys -X copy-selection-and-cancel
+bind-key    -T copy-mode-vi Enter             send-keys -X copy-selection-and-cancel
+bind-key    -T copy-mode-vi Space             send-keys -X begin-selection
+bind-key    -T copy-mode-vi A                 send-keys -X append-selection-and-cancel
+bind-key    -T copy-mode-vi v                 send-keys -X begin-selection
+bind-key    -T copy-mode-vi y                 send-keys -X copy-selection-and-cancel
+#bind-key    -T copy-mode-vi MouseDrag1Pane    select-pane ; send-keys -X begin-selection
+bind-key    -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-selection-and-cancel
