"fixed" the copy/paste in tmux...maybe again?

--- a/tmux.conf
+++ b/tmux.conf
@@ -20,7 +20,7 @@ bind-key    Right select-pane -R
 bind P paste-buffer
 
 bind-key r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded"
-bind-key s run-shell "tmux show-buffer | xclip -sel clip -i &>/dev/null" \; display-message "Copied tmux buffer to system clipboard"
+bind-key s run-shell -b "tmux show-buffer | xclip -sel clip &>/dev/null" \; display-message "Copied tmux buffer to system clipboard"
 
 bind-key -n MouseDrag1Pane if -Ft= '#{mouse_any_flag}' 'if -Ft= \"#{pane_in_mode}\" \"copy-mode -M\" \"send-keys -M\"' 'copy-mode -M'
 
