--- a/tmux.conf
+++ b/tmux.conf
@@ -7,36 +7,38 @@ set -g history-limit 999999
 set -g status-fg green
 set -g status-bg black
 set -g mouse on
+set -g set-clipboard external
 
 #set-window-option -g mode-keys vi
 setw -g mode-keys vi
 set -g status-keys vi
 
-bind-key    Up    select-pane -U
-bind-key    Down  select-pane -D
-bind-key    Left  select-pane -L
-bind-key    Right select-pane -R
-
 bind P paste-buffer
+bind -T root MouseUp2Pane paste
 
+bind-key Up    select-pane -U
+bind-key Down  select-pane -D
+bind-key Left  select-pane -L
+bind-key Right select-pane -R
+
+bind-key v run-shell "xclip -sel clip -o | tmux load-buffer -bxclip -" \; paste-buffer -bxclip -d 
 bind-key r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded"
 bind-key s run-shell -b "tmux show-buffer | xclip -sel clip &>/dev/null" \; display-message "Copied tmux buffer to system clipboard"
 
-bind-key -n MouseDrag1Pane if -Ft= '#{mouse_any_flag}' 'if -Ft= \"#{pane_in_mode}\" \"copy-mode -M\" \"send-keys -M\"' 'copy-mode -M'
+bind-key  -T copy-mode    C-Space           send-keys -X begin-selection
+bind-key  -T copy-mode    C-g               send-keys -X clear-selection
+bind-key  -T copy-mode    C-w               send-keys -X copy-selection-and-cancel
+#bind-key  -T copy-mode    MouseDrag1Pane    select-pane ; send-keys -X begin-selection
+bind-key  -T copy-mode    MouseDragEnd1Pane send-keys -X copy-selection-and-cancel
+bind-key  -T copy-mode    M-w               send-keys -X copy-selection-and-cancel
+bind-key  -T copy-mode    Enter             send-keys -X copy-selection-and-cancel
 
-bind-key    -T copy-mode    C-Space           send-keys -X begin-selection
-bind-key    -T copy-mode    C-g               send-keys -X clear-selection
-bind-key    -T copy-mode    C-w               send-keys -X copy-selection-and-cancel
-#bind-key    -T copy-mode    MouseDrag1Pane    select-pane ; send-keys -X begin-selection
-bind-key    -T copy-mode    MouseDragEnd1Pane send-keys -X copy-selection-and-cancel
-bind-key    -T copy-mode    M-w               send-keys -X copy-selection-and-cancel
-bind-key    -T copy-mode    Enter             send-keys -X copy-selection-and-cancel
-
-bind-key    -T copy-mode-vi C-j               send-keys -X copy-selection-and-cancel
-bind-key    -T copy-mode-vi Enter             send-keys -X copy-selection-and-cancel
-bind-key    -T copy-mode-vi Space             send-keys -X begin-selection
-bind-key    -T copy-mode-vi A                 send-keys -X append-selection-and-cancel
-bind-key    -T copy-mode-vi v                 send-keys -X begin-selection
-bind-key    -T copy-mode-vi y                 send-keys -X copy-selection-and-cancel
-#bind-key    -T copy-mode-vi MouseDrag1Pane    select-pane ; send-keys -X begin-selection
-bind-key    -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-selection-and-cancel
+bind-key  -T copy-mode-vi C-j               send-keys -X copy-selection-and-cancel
+bind-key  -T copy-mode-vi Enter             send-keys -X copy-selection-and-cancel
+bind-key  -T copy-mode-vi Space             send-keys -X begin-selection
+bind-key  -T copy-mode-vi A                 send-keys -X append-selection-and-cancel
+bind-key  -T copy-mode-vi v                 send-keys -X begin-selection
+bind-key  -T copy-mode-vi y                 send-keys -X copy-selection
+bind-key  -T copy-mode-vi r                 send-keys -X rectangle-toggle
+#bind-key  -T copy-mode-vi MouseDrag1Pane    select-pane ; send-keys -X begin-selection
+bind-key  -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-selection-and-cancel
